--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
-Opeoluwa Adeyeri <adeyeriopeoluwa05@gmail.com>
-Blessing Nwakwuo <blessingnwakwuo@outlook.com>
+Oladele Basheer<ajaooolade@gmail.com>
+Hamisu Yusuf<hamisuyusuf180@gmail.com>
+
